--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "semantic-ui-css": "^2.4.1",
     "vue": "^2.6.11",
     "vue-flash-message": "^0.7.2",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vue-toastr": "^2.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
